# SBMPS

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: package.json  pyproject.toml
apps/api/sdmps_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/src/: __init__.py  db.py  ingestion.py  main.py  persisted_state.py
apps/api/src/api/: dependencies.py  router.py
apps/api/src/api/routes/: alerts.py  auth.py  conjunctions.py  dashboard.py  feeds.py  health.py  heatmaps.py  live.py  objects.py  simulations.py
apps/api/src/core/: __init__.py  config.py
apps/api/src/data/: __init__.py  store.py
apps/api/src/models/: __init__.py
apps/api/src/schemas/: alert.py  conjunction.py  dashboard.py  heatmap.py  live.py  object.py  operations.py  simulation.py
apps/api/src/services/: __init__.py  conjunctions.py  dashboard.py  feeds.py  live.py  objects.py  operations.py  simulations.py
apps/api/tests/: test_api.py  test_health.py
apps/web/: middleware.ts  next.config.mjs  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/alerts/: alerts-page-client.tsx  page.tsx
apps/web/app/conjunctions/: conjunctions-page-client.tsx  page.tsx
apps/web/lib/: features.ts
apps/web/store/: operations-store.ts
apps/workers/: package.json  pyproject.toml
apps/workers/sdmps_workers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/workers/src/: __init__.py  ingestion_backend.py  main.py  queue.py
apps/workers/src/core/: __init__.py  config.py
apps/workers/src/jobs/: __init__.py  alerts.py  conjunctions.py  ingestion.py  propagation.py  risk.py  simulations.py
apps/workers/tests/: test_bootstrap.py  test_ingestion.py  test_jobs_import.py
docs/: SDMPS_IMPLEMENTATION_PLAN.md
infra/docker/: api.Dockerfile  web.Dockerfile  workers.Dockerfile
infra/env/: api.env.example  web.env.example  workers.env.example
infra/observability/: prometheus.yml
(+42 files in other folders)
