[project]
name = "sdmps-api"
version = "0.1.0"
description = "SDMPS FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "redis>=5.2.1",
  "sgp4>=2.24",
  "uvicorn[standard]>=0.34.0",
  "psycopg[binary]>=3.2.3",
  "pytest>=8.3.4",
  "ruff>=0.8.4"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
