[project]
name = "sdmps-workers"
version = "0.1.0"
description = "SDMPS worker service"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "redis>=5.2.1",
  "pytest>=8.3.4",
  "ruff>=0.8.4"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
